added note on running the code under Java 9